deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
spec:
  selector:
    matchLabels:
      run: java-app
  replicas: 2
  template:
    metadata:
      labels:
        run: java-app
    spec:
      containers:
      - name: java-app
        image: gargisharma20/springjava
        ports:
        - containerPort: 80
