service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-app
  labels:
    run: java-app
spec:
  type: LoadBalancer
  ports:
  - port: 8080                  
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    run: java-app
