ingress.yml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
   name: java-app-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   rules:
   - host: java-app.com
     http:
       paths:
       - path: /
         backend:
           serviceName: java-app
           servicePort: 8080
